2004-09-27 07:40 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormFilePrefsManager.m: Bumped version to 0.8.1 (Alpha)
	* GormInfo.plist: Bumped version to 0.8.1 (Alpha)
	* Documentation/Gorm.texi: Updated documentation.
	
2004-09-26 08:16 Gregory John Casamento <greg_casamento@yahoo.com>
	
	* Version 0.8.0
	
2004-09-25 07:21 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormInfo.plist: Changed version number to 0.8.0 (Alpha)
	since we are now, more or less, in "pre-release" mode.
	* GormFilePrefsManager.m: Updated call which sets version.
	* Palettes/0Menus/GormMenuAttributesInspector.gorm:
	* Palettes/1Windows/GormNSWindowInspector.gorm:
	* Palettes/2Controls/ControlsPalette.gorm:
	* Palettes/2Controls/GormNSBoxInspector.gorm:
	* Palettes/2Controls/GormNSButtonInspector.gorm:
	* Palettes/2Controls/GormNSFormInspector.gorm:
	* Palettes/2Controls/GormNSMatrixInspector.gorm:
	* Palettes/2Controls/GormNSPopUpButtonInspector.gorm:
	* Palettes/2Controls/GormNSProgressIndicatorInspector.gorm:
	* Palettes/2Controls/GormNSStepperInspector.gorm:
	* Palettes/2Controls/GormNSTextFieldInspector.gorm:
	* Palettes/3Containers/GormNSBrowserInspector.gorm:
	* Palettes/3Containers/GormNSTableViewInspector.gorm:
	* Palettes/3Containers/GormTabViewInspector.gorm:
	* Palettes/4Data/GormNSComboBoxInspector.gorm:
	* Palettes/4Data/GormNSDateFormatterInspector.gorm:
	* Palettes/4Data/GormNSImageViewInspector.gorm:
	* Palettes/4Data/GormNSNumberFormatterInspector.gorm:
	* Palettes/4Data/GormNSTextViewInspector.gorm: Modified spacing
	of the widgets so that text isn't clipped when using Vera
	font.

2004-09-24  Adam Fedor  <fedor@gnu.org>

	* GModelDecoder.m ([GormDocument -openGModel:]): Initialize
	variable.

2004-09-17 18:07 Gregory John Casamento <greg_casamento@yahoo.com>

	* VersionProfiles.plist: Updated the profile to properly
	set the version for NSTextFieldCell which has also been
	updated since the last release.
	