@@ -1,3 +1,10 @@
+2004-10-02 01:15 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* Palettes/0Menus/GormNSMenu.m: Modified 
+	-[GormNSMenu handleNotification:] so that the menu is no longer
+	closed if the window which displays it isn't visible.  This 
+	prevents the annoying "Ordering invalid window 0" error.
+	
 2004-09-27 07:40 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormFilePrefsManager.m: Bumped version to 0.8.1 (Alpha)
